finalize changelog for nvidia-graphics-drivers (302.11-1)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/302@2994 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (302.11-1) UNRELEASED; urgency=low
+nvidia-graphics-drivers (302.11-1) experimental; urgency=low
 
   * New upstream beta 302.11 (2012-05-18).
     - Added support for calculating the physical size and DPI of each
@@ -9,7 +9,7 @@ nvidia-graphics-drivers (302.11-1) UNRELEASED; urgency=low
     - Fixed a bug that caused the link configuration of DisplayPort devices to
       be reported incorrectly in nvidia-settings.
 
- -- Andreas Beckmann <debian@abeckmann.de>  Mon, 21 May 2012 18:37:27 +0200
+ -- Andreas Beckmann <debian@abeckmann.de>  Mon, 21 May 2012 22:36:02 +0200
 
 nvidia-graphics-drivers (302.07-1) experimental; urgency=low
 
