bug-script: report all /lib/modules/.../nvidia.ko in and their version
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@3030 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (295.53-2) UNRELEASED; urgency=low
+
+  * bug-script: report all /lib/modules/.../nvidia.ko in and their version.
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Sun, 03 Jun 2012 16:22:43 +0200
+
 nvidia-graphics-drivers (295.53-1) unstable; urgency=low
 
   * New upstream long-lived branch release 295.53 (2012-05-16).
