--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (302.17-1) UNRELEASED; urgency=low
+nvidia-graphics-drivers (302.17-1) experimental; urgency=low
 
   * New upstream release 302.17 (2012-06-15).
     - Made nvidiaXineramaInfoOrder consistent with the RRSetOutputPrimary
@@ -43,7 +43,7 @@ nvidia-graphics-drivers (302.17-1) UNRELEASED; urgency=low
       is kept as a synonym for "MetaModeOrientation", for backwards
       compatibility.
 
- -- Andreas Beckmann <debian@abeckmann.de>  Mon, 18 Jun 2012 12:40:45 +0200
+ -- Andreas Beckmann <debian@abeckmann.de>  Thu, 21 Jun 2012 11:51:48 +0200
 
 nvidia-graphics-drivers (302.11-1) experimental; urgency=low
 
