finalize changelog for nvidia-graphics-drivers (302.17-2), upload to unstable
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/302@3064 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (302.17-2) unstable; urgency=low
+
+  * Upload to unstable.
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Tue, 26 Jun 2012 10:48:21 +0200
+
 nvidia-graphics-drivers (302.17-1) experimental; urgency=low
 
   * New upstream release 302.17 (2012-06-15).
