add missing Depends: libnvidia-ml1
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@3120 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (302.17-3) UNRELEASED; urgency=low
+
+  * nvidia-smi: Add missing Depends: libnvidia-ml1.  (Closes: #679332)
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Sat, 30 Jun 2012 16:09:39 +0200
+
 nvidia-graphics-drivers (302.17-2) unstable; urgency=low
 
   * Upload to unstable.
