squeeze-backports has 295.59
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@3121 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 nvidia-graphics-drivers (302.17-3) UNRELEASED; urgency=low
 
   * nvidia-smi: Add missing Depends: libnvidia-ml1.  (Closes: #679332)
+  * nvidia-detect: squeeze-backports now has 295.59.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Sat, 30 Jun 2012 16:09:39 +0200
 
