--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ nvidia-graphics-drivers (302.17-3) UNRELEASED; urgency=low
   * nvidia-smi: Add missing Depends: libnvidia-ml1.  (Closes: #679332)
   * nvidia-detect: squeeze-backports now has 295.59.
   * nvidia-detect: wheezy does not have legacy 96xx.
+  * nvidia-libopencl1: Provides/Conflicts/Replaces: libopencl1.
+    (Closes: #679047)
 
  -- Andreas Beckmann <debian@abeckmann.de>  Sat, 30 Jun 2012 16:09:39 +0200
 
