--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (302.17-4) UNRELEASED; urgency=low
+
+  * Work around dpkg-gencontrol bug #659814. 
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Thu, 12 Jul 2012 09:36:35 +0200
+
 nvidia-graphics-drivers (302.17-3) unstable; urgency=low
 
   * nvidia-smi: Add missing Depends: libnvidia-ml1.  (Closes: #679332)
