update symbols control files
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304@3151 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -81,6 +81,7 @@ nvidia-graphics-drivers (304.22-1) UNRELEASED; urgency=low
       ignored in that case.
   * Upload to experimental.
   * Update nv-readme.ids.
+  * Update symbols control files.
   * Work around dpkg-gencontrol bug #659814. 
 
  -- Andreas Beckmann <debian@abeckmann.de>  Mon, 16 Jul 2012 19:05:43 +0200
