--- a/debian/changelog
+++ b/debian/changelog
@@ -83,6 +83,9 @@ nvidia-graphics-drivers (304.22-1) UNRELEASED; urgency=low
   * Update nv-readme.ids.
   * Update symbols control files.
   * Work around dpkg-gencontrol bug #659814. 
+  * Convert *-ia32 into transitional packages due to ia32-libs transition:
+    - $pkg:i386 Provides: $pkg-i386
+    - $pkg-ia32 Recommends: $pkg-i386
 
  -- Andreas Beckmann <debian@abeckmann.de>  Mon, 16 Jul 2012 19:05:43 +0200
 
