--- a/debian/changelog
+++ b/debian/changelog
@@ -86,6 +86,7 @@ nvidia-graphics-drivers (304.22-1) UNRELEASED; urgency=low
   * Convert *-ia32 into transitional packages due to ia32-libs transition:
     - $pkg:i386 Provides: $pkg-i386
     - $pkg-ia32 Recommends: $pkg-i386
+    - Add multiarch instructions to long descriptions.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Mon, 16 Jul 2012 19:05:43 +0200
 
