update lintian overrides
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304@3158 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -82,6 +82,7 @@ nvidia-graphics-drivers (304.22-1) UNRELEASED; urgency=low
   * Upload to experimental.
   * Update nv-readme.ids.
   * Update symbols control files.
+  * Update lintian overrides.
   * Work around dpkg-gencontrol bug #659814. 
   * Convert *-ia32 into transitional packages due to ia32-libs transition:
     - $pkg:i386 Provides: $pkg-i386
