--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (304.22-1) UNRELEASED; urgency=low
+nvidia-graphics-drivers (304.22-1) experimental; urgency=low
 
   * New upstream beta 304.22 (2012-07-13).
     - Added support for the following GPUs: GeForce GTX 680M, Quadro K1000M,
@@ -89,7 +89,7 @@ nvidia-graphics-drivers (304.22-1) UNRELEASED; urgency=low
     - $pkg-ia32 Recommends: $pkg-i386
     - Add multiarch instructions to long descriptions.
 
- -- Andreas Beckmann <debian@abeckmann.de>  Mon, 16 Jul 2012 19:05:43 +0200
+ -- Andreas Beckmann <debian@abeckmann.de>  Tue, 17 Jul 2012 19:29:40 +0200
 
 nvidia-graphics-drivers (302.17-3) unstable; urgency=low
 
