--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,41 @@
+nvidia-graphics-drivers (304.30-1) UNRELEASED; urgency=low
+
+  * New upstream beta 304.30 (2012-07-30).
+    - Added support for RandR per-CRTC gamma manipulation through the
+      RandR 1.2 RRGetCrtcGammaSize, RRGetCrtcGamma, and RRSetCrtcGamma
+      requests.
+    - Fixed a bug that caused RRSetOutputPrimary requests to incorrectly
+      generate BadValue errors when setting the primary output to None.  This
+      caused gnome-settings-daemon to crash after changing the screen
+      configuration in response to a display hotplug or the display change
+      hot-key being pressed.
+    - Fixed a problem where RENDER Glyphs operations would exhibit severe
+      performance issues in certain cases, such as when used with gradients
+      by Cairo and Chromium.
+    - Fixed a bug that caused X to hang when resuming certain DisplayPort
+      display devices (such as Apple brand mini-DisplayPort to dual-link DVI
+      adapters) from power-saving mode.
+    - Added support for the following GPU: Tesla K10.
+    - Fixed a bug that caused an X screen to be extended to Quadro SDI Output
+      devices by default.  An X screen will still use an SDI Output device if
+      it is the only display device available.  To use a SDI Output device on
+      an X screen with other display devices available, include the SDI Output
+      device with either the "UseDisplayDevice" or "MetaMode" X configuration
+      options.
+    - Updated X11 modeline validation such that modes not defined in a
+      display device's EDID are discarded if the EDID 1.3 "GTF Supported"
+      flag is unset or if the EDID 1.4 "Continuous Frequency" flag is
+      unset.  The new "AllowNonEdidModes" token for the ModeValidation
+      X configuration option can be used to disable this new check.
+    - Fixed a bug, introduced in the 295.xx release series, with EDID
+      detection on some laptop internal panels.  This bug caused the
+      laptop internal panel to show six small copies of the desktop.
+      (Closes: #681453)
+    - Added support for FXAA, Fast Approximate Anti-Aliasing.
+  * Update nv-readme.ids.
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Tue, 31 Jul 2012 00:07:32 +0200
+
 nvidia-graphics-drivers (304.22-1) experimental; urgency=low
 
   * New upstream beta 304.22 (2012-07-13).
