--- a/debian/changelog
+++ b/debian/changelog
@@ -33,6 +33,7 @@ nvidia-graphics-drivers (304.30-1) UNRELEASED; urgency=low
       (Closes: #681453)
     - Added support for FXAA, Fast Approximate Anti-Aliasing.
   * Update nv-readme.ids.
+  * Update symbols control files.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Tue, 31 Jul 2012 00:07:32 +0200
 
