--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (304.30-1) UNRELEASED; urgency=low
+nvidia-graphics-drivers (304.30-1) experimental; urgency=low
 
   * New upstream beta 304.30 (2012-07-30).
     - Added support for RandR per-CRTC gamma manipulation through the
@@ -37,7 +37,7 @@ nvidia-graphics-drivers (304.30-1) UNRELEASED; urgency=low
   * xserver-xorg-video-nvidia.postrm: Do not fail if the debconf templates
     from nvidia-support are not available.
 
- -- Andreas Beckmann <debian@abeckmann.de>  Tue, 31 Jul 2012 00:07:32 +0200
+ -- Andreas Beckmann <debian@abeckmann.de>  Tue, 31 Jul 2012 11:36:58 +0200
 
 nvidia-graphics-drivers (304.22-1) experimental; urgency=low
 
