--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (304.30-2) UNRELEASED; urgency=low
+
+  * Disable patch-3.0-rt-nvidia.patch, no longer needed.
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Tue, 31 Jul 2012 17:46:11 +0200
+
 nvidia-graphics-drivers (304.30-1) experimental; urgency=low
 
   * New upstream beta 304.30 (2012-07-30).
