legacy-qualify nvidia-settings
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304@3227 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 nvidia-graphics-drivers (304.30-2) UNRELEASED; urgency=low
 
   * Disable patch-3.0-rt-nvidia.patch, no longer needed.
+  * Add legacy qualification to nvidia-settings suggestion.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Tue, 31 Jul 2012 17:46:11 +0200
 
