--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (304.30-2+proxy) UNRELEASED; urgency=low
+
+  * nvidia-cuda-proxy: New package for nvidia-cuda-proxy-{control,server}.
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Tue, 31 Jul 2012 17:46:11 +0200
+
 nvidia-graphics-drivers (304.30-2) UNRELEASED; urgency=low
 
   * Disable patch-3.0-rt-nvidia.patch, no longer needed.
