--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ nvidia-graphics-drivers (304.30-2) UNRELEASED; urgency=low
 
   * Disable patch-3.0-rt-nvidia.patch, no longer needed.
   * Add legacy qualification to nvidia-settings suggestion.
+  * nvidia-opencl-icd: Ship new library libnvidia-opencl.so.1 and tighten
+    dependency on nvidia-opencl-common and libnvidia-compiler.
+    (Closes: #683678)
 
  -- Andreas Beckmann <debian@abeckmann.de>  Tue, 31 Jul 2012 17:46:11 +0200
 
