make --pasv overridable
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304@3261 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ nvidia-graphics-drivers (304.32-1) UNRELEASED; urgency=low
     - Modified handling of RRSetScreenSize requests to ignore requests that
       do not actually resize the screen.  This reduces screen flicker in certain
       cases when using GNOME.
+  * debian/rules: get-orig-source: Make --pasv overridable.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Sat, 04 Aug 2012 13:46:26 +0200
 
