update symbols control files
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304@3263 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ nvidia-graphics-drivers (304.32-1) UNRELEASED; urgency=low
       cases when using GNOME.
   * debian/rules: get-orig-source: Make --pasv overridable.
   * Add xorg-video-abi-13 as alternative dependency.
+  * Update symbols control files.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Sat, 04 Aug 2012 13:46:26 +0200
 
