--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+nvidia-graphics-drivers (304.32-2) UNRELEASED; urgency=low
+
+  * nvidia-kernel-source: Add Built-Using attribute to the generated module
+    packages to record the exact versions of linux and nvidia-graphics-drivers
+    that were used during the build.
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Mon, 06 Aug 2012 20:32:21 +0200
+
 nvidia-graphics-drivers (304.32-1) experimental; urgency=low
 
   * New upstream beta 304.32 (2012-08-03).
