new patch to fix compilation with Linux 3.6
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@3282 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,8 @@ nvidia-graphics-drivers (304.37-1) UNRELEASED; urgency=low
     that were used during the build.
   * libgl1-nvidia-glx:i386: Add Breaks: ia32-libs (<< 20120701) because that
     is shipping /usr/lib32/libGL.so.1 which gets no longer diverted away.
+  * 3.6_kernel.patch: New patch to fix compilation with Linux 3.6, taken from
+    rpmfusion.  (Closes: #684486)
 
  -- Andreas Beckmann <debian@abeckmann.de>  Tue, 14 Aug 2012 02:02:44 +0200
 
