make dkms package M-A foreign
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@3283 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,7 @@ nvidia-graphics-drivers (304.37-1) UNRELEASED; urgency=low
     is shipping /usr/lib32/libGL.so.1 which gets no longer diverted away.
   * 3.6_kernel.patch: New patch to fix compilation with Linux 3.6, taken from
     rpmfusion.  (Closes: #684486)
+  * nvidia-kernel-dkms: Set Multi-Arch: foreign (instead of allowed).
 
  -- Andreas Beckmann <debian@abeckmann.de>  Tue, 14 Aug 2012 02:02:44 +0200
 
