--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (304.37-1) UNRELEASED; urgency=low
+nvidia-graphics-drivers (304.37-1) unstable; urgency=low
 
   * New upstream long lived branch release 304.37 (2012-08-13).
     - Removed the ability to enable SLI on GPUs with ECC enabled.
@@ -23,8 +23,9 @@ nvidia-graphics-drivers (304.37-1) UNRELEASED; urgency=low
   * nvidia-kernel-dkms: Set Multi-Arch: foreign (instead of allowed).
   * Add nvidia-kernel-dkms (= ${binary:Version}) as preferred alternative to
     (virtual) nvidia-kernel-${nvidia:Version}.  (Closes: #684782)
+  * Upload to unstable.
 
- -- Andreas Beckmann <debian@abeckmann.de>  Tue, 14 Aug 2012 02:02:44 +0200
+ -- Andreas Beckmann <debian@abeckmann.de>  Tue, 14 Aug 2012 09:36:31 +0200
 
 nvidia-graphics-drivers (304.32-1) experimental; urgency=low
 
