report libgl1-nvidia-glx-ia32 and libgl1-nvidia-legacy-173xx-glx-ia32
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@3293 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
 nvidia-graphics-drivers (304.37-2) UNRELEASED; urgency=low
 
-  * bug-control: Report installed versions of libgl1-nvidia-alternatives-ia32
-    and ia32-libs.
+  * bug-control: Report installed versions of libgl1-nvidia-alternatives-ia32,
+    libgl1-nvidiai{,-legacy-173xx}-glx-ia32, and ia32-libs.
 
  -- Andreas Beckmann <debian@abeckmann.de>  Thu, 16 Aug 2012 09:45:17 +0200
 
