conftest.h: check for linux/kconfig.h (304.30)
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@3324 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,7 @@ nvidia-graphics-drivers (304.43-1) UNRELEASED; urgency=low
   * Update nv-readme.ids.
   * conftest.h:
     - Implement check for linux/screen_info.h (302.17).
+    - Implement check for linux/kconfig.h (304.30).
   * 3.6_kernel.patch: Remove, fixed upstream.
   * bug-control: Report installed versions of libgl1-nvidia-alternatives-ia32,
     libgl1-nvidia{,-legacy-173xx}-glx-ia32, and ia32-libs.
