--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+nvidia-graphics-drivers (304.43-2) UNRELEASED; urgency=low
+
+  * get-orig-source: Skip downloading if cached files are in ../.cache/
+
+ -- Andreas Beckmann <debian@abeckmann.de>  Tue, 11 Sep 2012 16:20:34 +0200
+
 nvidia-graphics-drivers (304.43-1) unstable; urgency=low
 
   * New upstream long lived branch release 304.43 (2012-08-27).
