--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,23 @@
-nvidia-graphics-drivers (304.43-2) UNRELEASED; urgency=low
+nvidia-graphics-drivers (304.48-1) UNRELEASED; urgency=low
 
+  * New upstream long lived branch release 304.48 (2012-09-11).
+    - Fixed RandR per-CRTC gamma persistence across modeswitches and
+      VT-switches.
+    - Fixed a bug that caused the X server to sometimes hang in response to
+      input events.  (Closes: #684941)
+    - Fixed a reduction in rendering performance for core X11 rendering on
+      certain GPUs that occurred in the 290.* series of releases.
+    - Fixed a bug that prevented PowerMizer from working correctly on
+      some boards with GDDR5 memory, such as some GeForce GT 240 SKUs.
+    - Added support for the following GPUs: GeForce GTX 660, GeForce GTX 650.
+    - Fixed a bug that caused OpenGL applications to not animate properly
+      when a rotation or a transformation was applied on some older X
+      server versions.
+    - Enabled FXAA with Unified Back Buffers.
+  * Update nv-readme.ids.
   * get-orig-source: Skip downloading if cached files are in ../.cache/
 
- -- Andreas Beckmann <debian@abeckmann.de>  Tue, 11 Sep 2012 16:20:34 +0200
+ -- Andreas Beckmann <debian@abeckmann.de>  Wed, 12 Sep 2012 11:10:00 +0200
 
 nvidia-graphics-drivers (304.43-1) unstable; urgency=low
 
