update symbols control files
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@3376 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,7 @@ nvidia-graphics-drivers (304.48-1) UNRELEASED; urgency=low
       server versions.
     - Enabled FXAA with Unified Back Buffers.
   * Update nv-readme.ids.
+  * Update symbols control files.
   * get-orig-source: Skip downloading if cached files are in ../.cache/
 
  -- Andreas Beckmann <debian@abeckmann.de>  Wed, 12 Sep 2012 11:10:00 +0200
