--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-nvidia-graphics-drivers (304.48-1) UNRELEASED; urgency=low
+nvidia-graphics-drivers (304.48-1) unstable; urgency=low
 
   * New upstream long lived branch release 304.48 (2012-09-11).
     - Fixed RandR per-CRTC gamma persistence across modeswitches and
@@ -19,7 +19,7 @@ nvidia-graphics-drivers (304.48-1) UNRELEASED; urgency=low
   * get-orig-source: Skip downloading if cached files are in ../.cache/
   * Switch .deb compression to xz, saves 13 MB (24 %) on amd64.
 
- -- Andreas Beckmann <debian@abeckmann.de>  Wed, 12 Sep 2012 11:10:00 +0200
+ -- Andreas Beckmann <debian@abeckmann.de>  Wed, 12 Sep 2012 12:23:09 +0200
 
 nvidia-graphics-drivers (304.43-1) unstable; urgency=low
 
